Service tweaks to file XML file

--- a/trunk/Temperature.DataService/Web.config
+++ b/trunk/Temperature.DataService/Web.config
@@ -123,19 +123,21 @@
   <system.serviceModel>
     <services>
       <service behaviorConfiguration="TemperatureServiceBehavior" name="Bortosky.Samples.Temperature.DataService.TemperatureService">
-        <endpoint address="" binding="wsHttpBinding" contract="Bortosky.Samples.Temperature.DataService.ITemperatureService">
+        <endpoint address="" binding="wsHttpBinding" name="TemperatureServiceWs"
+          contract="Bortosky.Samples.Temperature.DataService.ITemperatureService">
           <identity>
             <dns value="localhost" />
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <endpoint address="mex" binding="mexHttpBinding" name="TemperatureServiceMex"
+          contract="IMetadataExchange" />
       </service>
     </services>
     <behaviors>
       <serviceBehaviors>
         <behavior name="TemperatureServiceBehavior">
           <serviceMetadata httpGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="false" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
